# Luganda-Text-Normalizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
data/: Bible_source.txt  news_source.txt  nouns.txt  sample_corpus.txt  twitter_source.txt  verbs.txt
docs/: architecture.md
normalizer/: __init__.py  abbreviations-dictionary.json  abbreviations.py  abbreviations_dictionary.json  cleaner.py  code_switching.py  codeswitching.py  contractions.py  currency.py  datetime.py  datetime_expand.py  diacritics.py  edge_cases.py  morphology_nouns.py  morphology_verbs.py  noun_stripper.py  number_words.py  numbers.py  pipeline.py  spelling-dictionary.json  spelling.py  spelling_dictionary.json  stopwords.py  tokenizer.py  verb_stripper.py
normalizer/lexicon_data/: nouns.txt  verbs.txt
tests/: test_abbreviations.py  test_cleaner.py  test_code-switching.py  test_code_switching.py  test_currency.py  test_datetime.py  test_datetime_expand.py  test_diacritics.py  test_edge_cases.py  test_morphology_nouns.py  test_morphology_verbs.py  test_number_words.py  test_pipeline.py  test_spelling.py  test_tokenizer.py
