[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luganda-text-normalizer"
version = "0.1.0"
description = "Preprocessing utilities (cleaning, elision expansion, abbreviation/acronym expansion, currency and date/time expansion, number-to-words expansion, tokenization, spelling standardization, noun/verb morphology stripping, code-switching detection) for Luganda NLP pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Oketch Benjamin Othieno, Ariho Manson Shawn, Nakato Hidayah, Kwagala Jonathan, Charis Opol" }
]
keywords = [
    "luganda",
    "nlp",
    "text-normalization",
    "tokenization",
    "low-resource-languages",
    "african-languages",
    "uganda",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nltk>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/Ministry-of-ICT-Internship-2026/Luganda-Text-Normalizer"
Repository = "https://github.com/Ministry-of-ICT-Internship-2026/Luganda-Text-Normalizer"
"Bug Tracker" = "https://github.com/Ministry-of-ICT-Internship-2026/Luganda-Text-Normalizer/issues"

# The importable package is "normalizer" (matches every internal import in
# this codebase and all existing tests), even though the pip/PyPI
# distribution name above is "luganda-normalizer".
[tool.setuptools]
packages = ["normalizer"]

[tool.setuptools.package-data]
normalizer = ["spelling_dictionary.json", "abbreviations_dictionary.json", "lexicon_data/*.txt"]
